--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,6 +1,8 @@
 # .github/workflows/deploy.yml
 name: Deploy
-on: ['workflow_dispatch']
+on: 
+  push:
+  workflow_dispatch:
 
 jobs:
   deployment:
