--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -14,10 +14,10 @@ jobs:
       run: 
         apt-get update
         sudo apt-get install -y curl
-        curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3
-        chmod 700 get_helm.sh
-        ./get_helm.sh
-        
+        sudo apt-get install wget
+        wget https://get.helm.sh/helm-v3.9.2-linux-amd64.tar.gz
+        tar -zxvf helm-v3.9.2-linux-amd64.tar.gz
+        mv linux-amd64/helm /usr/local/bin/helm
     - name: 'Create helm Chart'
       run:   
          helm create helloworld
