--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -14,10 +14,11 @@ jobs:
       run: 
         apt-get update
         sudo apt-get install -y curl
-        sudo apt-get install wget
-        wget https://get.helm.sh/helm-v3.9.2-linux-amd64.tar.gz
-        tar -zxvf helm-v3.9.2-linux-amd64.tar.gz
-        mv linux-amd64/helm /usr/local/bin/helm
+        curl https://baltocdn.com/helm/signing.asc | gpg --dearmor | sudo tee /usr/share/keyrings/helm.gpg > /dev/null
+        sudo apt-get install apt-transport-https --yes
+        echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/helm.gpg] https://baltocdn.com/helm/stable/debian/ all main" | sudo tee /etc/apt/sources.list.d/helm-stable-debian.list
+        sudo apt-get update
+        sudo apt-get install helm
     - name: 'Create helm Chart'
       run:   
          helm create helloworld
