--- a/.github/workflows/helm.yml
+++ b/.github/workflows/helm.yml
@@ -7,6 +7,9 @@ on:
 jobs:
   deployment:
     runs-on: 'ubuntu-latest'
+    permissions:
+      contents: 'read'
+      id-token: 'write'
     steps:
     - uses: actions/checkout@v1
     - id: 'auth'
