--- a/.github/workflows/helm.yml
+++ b/.github/workflows/helm.yml
@@ -23,7 +23,7 @@ jobs:
     - name: 'GKE Credentials'
       continue-on-error: false
       run: |-
-        gcloud container clusters get-credentials upasna-helm-cluster --zone us-central1-c --project q-gcp-7959-genesysstaff-22-06 
+         gcloud container clusters get-credentials cluster-ambassador --zone us-central1-c --project q-gcp-7959-genesysstaff-22-06 
     - name: 'helm install '
       run: 
         apt-get update
